<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:id="@+id/linearOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <TextView
                android:id="@+id/lblWelComeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/_welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/imgWelcome"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginVertical="18dp"
                android:contentDescription="@string/image"
                android:padding="24dp"
                android:src="@drawable/ic_welocme" />

            <TextView
                android:id="@+id/lblInfoWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/welcome_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTwo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <include
                android:id="@+id/addName"
                layout="@layout/rounded_edittext" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/standardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_standard"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <include
                android:id="@+id/addStandard"
                layout="@layout/rounded_edittext" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/subjectLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_subject"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutThree"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/helpMessaage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/help_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/_welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                tools:visibility="visible" />

        </LinearLayout>

        <include
            android:id="@+id/btnStart"
            layout="@layout/layout_button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@id/btmNavView" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/btmNavView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemActiveIndicatorStyle="@mipmap/ic_launcher_round"
            app:itemIconSize="32dp"
            app:itemRippleColor="@android:color/darker_gray"
            app:itemTextAppearanceActive="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>